<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/home_settingsButton"
        style="@style/simpleButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="17dp"
        android:background="@color/colorPrimary"
        android:text="@string/home_settings"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_averageRunTimeText"/>

    <ImageView
        android:id="@+id/home_profileImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/home_user_profile_image_content_description"
        app:srcCompat="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/home_usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="4dp"
        android:text="Luke Farrell"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_usernameDataText"
        app:layout_constraintHorizontal_bias="0.497"
        style="@style/simpleText"/>

    <TextView
        android:id="@+id/home_usernameDataText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/home_username"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_profileImageView"
        app:layout_constraintHorizontal_bias="0.497"
        style="@style/simpleText"/>

    <TextView
        android:id="@+id/home_statsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_stats"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/home_usernameText"
        app:layout_constraintHorizontal_bias="0.501"
        style="@style/simpleText"/>

    <TextView
        android:id="@+id/home_totalMilesText"
        style="@style/simpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="5dp"
        android:text="@string/home_total_miles"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_statsText"/>

    <TextView
        android:id="@+id/home_timeCaughtText"
        style="@style/simpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/home_times_caught"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_totalMilesText"
        app:layout_constraintHorizontal_bias="0.497"/>

    <TextView
        android:id="@+id/home_timesEvadedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/home_times_evaded"
        app:layout_constraintTop_toBottomOf="@+id/home_timeCaughtText"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/simpleText"/>

    <TextView
        android:id="@+id/home_averagePaceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_average_pace"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/home_timesEvadedText"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/simpleText"/>

    <TextView
        android:id="@+id/home_averageRunTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_average_run_time"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/home_averagePaceText"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/simpleText"/>

    <Button
        android:id="@+id/home_historyButton"
        style="@style/simpleButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="6dp"
        android:text="@string/home_history"
        android:textAllCaps="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/home_settingsButton"
        app:layout_constraintRight_toRightOf="@+id/home_settingsButton"
        app:layout_constraintTop_toBottomOf="@+id/home_settingsButton"/>

    <Button
        android:id="@+id/home_startRunButton"
        style="@style/bottomButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/start_run"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>