<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/history_startRunButton"
        style="@style/bottomButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_run"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/history_toolbar"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/history_back"
        app:titleMargin="0dp"/>

    <TextView
        android:id="@+id/history_historyText"
        style="@style/simpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_history"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/listView"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/history_toolbar"/>

    <ListView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/history_startRunButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_historyText"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/listView"/>

</android.support.constraint.ConstraintLayout>